--- a/n/no/noc/nochex.com.html
+++ b/n/no/noc/nochex.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nochex.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606043330id_/http%3A//help.nochex.com/homepage.asp%3FAction%3DQ%26ID%3D108) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nochex.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207003942id_/http%3A//help.nochex.com/homepage.asp%3FAction%3DQ%26ID%3D108) for the most accurate reproduction.-->
 
 <html><head>
 <script language="javascript">
@@ -85,10 +85,14 @@ function _out(nam,num) {
 
 <meta http-equiv="Content-Language" content="en-gb">
 
-<title>NOCHEX Email Money | Homepage</title>
+<title>NOCHEX Online Payments | Help Centre</title>
 <link rel="SHORTCUT ICON" href="favicon.ico">
 
-<meta http-equiv="DESCRIPTION" content="NOCHEX lets you send money to anyone with an email address in the UK. NOCHEX is free to send and receive. It's like having an online internet debt collector, split expenses with friends all without going to a cashpoint or looking for your chequebook. In fact throw the chequebook away!">
+<meta http-equiv="DESCRIPTION" content="NOCHEX lets you send money to anyone with an email address in the UK. NOCHEX is free to send and receive. It's like 
+
+having an online internet debt collector, split expenses with friends all without going to a cashpoint or looking for your chequebook. In fact throw the chequebook 
+
+away!">
 <meta http-equiv="KEYWORDS" content="Send, money, request payments, payments, debit, debit card, instant, email payments, auction payments">
 
 
@@ -103,19 +107,21 @@ function _out(nam,num) {
 </tr>
 <tr>
 <td width="32" height="20"></td>
-<td width="78" height="20"><a href="http://www.nochex.com"><img name="a1" src="im/homex.gif" width="78" height="20" border="0" alt="Home"></a></td>
+<td width="78" height="20"><a href="http://www.nochex.com" onmouseover="_in('a1',2); return true;" onmouseout=" _in('a1',1); return true;"><img name="a1" src="im/homex.gif" width="78" height="20" border="0" alt="Home"></a></td>
 <td width="5" height="20"></td>
 <td width="78" height="20"><a href="http://www.nochex.com/newsignup" onmouseover="_in('b1',4); return true;" onmouseout=" _in('b1',3); return true;"><img name="b1" src="im/signupx.gif" width="78" height="20" border="0" alt="Sign-Up"></a></td>
 <td width="5" height="20"></td>
-<td width="78" height="20"><a href="http://www.nochex.com/highstreet"><img name="c1" src="im/highstreetx.gif" width="78" height="20" border="0" alt="High Street"></a></td>
+<td width="78" height="20"><a href="http://www.nochex.com/highstreet" onmouseover="_in('c1',6); return true;" onmouseout=" _in('c1',5); return true;"><img name="c1" src="im/highstreetx.gif" width="78" height="20" border="0" alt="High Street"></a></td>
 <td width="5" height="20"></td>
-<td width="78" height="20"><a href="http://www.nochex.com/community"><img name="d1" src="im/communityx.gif" width="78" height="20" border="0" alt="Community"></a></td>
+<td width="78" height="20"><a href="http://www.nochex.com/sell" onmouseover="_in('d1',8); return true;" onmouseout=" _in('d1',7); return true;"><img name="d1" src="im/communityx.gif" width="78" height="20" border="0" alt="Sell"></a></td>
 <td width="5" height="20"></td>
-<td width="78" height="20"><a href="http://www.nochex.com/auction"><img name="e1" src="im/auctionx.gif" width="78" height="20" border="0" alt="Auction"></a></td>
+<td width="78" height="20"><a href="http://www.nochex.com/auction" onmouseover="_in('e1',10); return true;" onmouseout=" _in('e1',9); return true;"><img name="e1" src="im/auctionx.gif" width="78" height="20" border="0" alt="Auction"></a></td>
 <td width="5" height="20"></td>
-<td width="78" height="20"><a href="http://help.nochex.com" onmouseover="_in('f1',12); return true;" onmouseout=" _in('f1',11); return true;"><img name="f1" src="im/helpz.gif" width="78" height="20" border="0" alt="Help"></a></td>
+<td width="78" height="20"><a href="http://esupport.nochex.com/?_a=knowledgebase" onmouseover="_in('f1',12); return true;" onmouseout=" _in('f1',11); return true;"><img name="f1" src="im/helpz.gif" width="78" height="20" border="0" alt="Help"></a></td>
 <td width="5" height="20"></td>
-<td width="78" height="20"><a href="https://www.nochex.com/nochex.dll/account/login" onmouseover="_in('g1',14); return true;" onmouseout=" _in('g1',13); return true;"><img name="g1" src="im/loginx.gif" width="78" height="20" border="0" alt="Login"></a></td>
+<td width="78" height="20"><a href="https://www.nochex.com/nochex.dll/account/login" onmouseover="_in('g1',14); return true;" onmouseout=" _in('g1',13); return 
+
+true;"><img name="g1" src="im/loginx.gif" width="78" height="20" border="0" alt="Login"></a></td>
 <td width="32" height="20"></td>
 </tr>
 </tbody></table>
@@ -150,7 +156,7 @@ function _out(nam,num) {
 </tr>
 <tr>
 <td bgcolor="#EFEFEF" valign="top"><font face="Verdana" size="4" color="#000000"><b></b></font></td>
-<td bgcolor="#EFEFEF"><font face="Verdana" size="2"><b>Data Protection</b> – Any information you provide us with will only be disclosed in accordance with the Data Protection Act of 1998.<br><br><b>Required Information</b> – To open a Nochex Standard account you must tell us certain personal information such as your name, email address, date of birth and postal address. For security, you must also submit a password and answer security questions. If you wish to open a Nochex Seller Account, additional information will be required including for example nature of your business, web address, and business address. For certain transactions you need to provide financial information such as your debit card details. We only collect the information that is required by regulation and law for us to process your transactions securely and protect you against fraud.<br><br><b>Use of Personal Information</b> – We only use your personal information to service your account and to improve our service to you. As part of our normal business operation, we do share some financial information with banks, card processing and verification services. Unless required by law, these organisations may not use your information for secondary purposes. Though we make every effort to preserve your privacy we may need to disclose personal information when required by law when we believe that such action is necessary to comply with current judicial proceedings, a court order or legal process serviced on our web site. Otherwise, under no circumstances will information you provided to Nochex be transmitted in any way to a third party. <br><br><b>Aggregate Statistical Information</b> – We may collect aggregated statistical information for purposes of improving our service and your experience with Nochex. This data does not contain personally identifying information, such as your name or email address.<br><br><b>Links</b> – This web site contains links to other sites, however Nochex is not responsible for the privacy practices of such other sites. We recommend you our users to be aware that when they leave our site to read the privacy statements of each and every web site that collects personally identifiable information. This privacy statement applies solely to information collected by this web site.<br><br><b>Changing information</b> – You can update your account information in the personal details section of the Nochex web site. However, we cannot delete user information because of legal, regulatory and technical back up requirements.<br><br>20/2/3<br><br></font></td>
+<td bgcolor="#EFEFEF"><font face="Verdana" size="2"><b>Data Protection</b> – Any information you provide us with will only be disclosed in accordance with the Data Protection Act of 1998.<br><br><b>Required Information</b> – To open a Nochex Standard account you must tell us certain personal information such as your name, email address, date of birth and postal address. For security, you must also submit a password and answer security questions. If you wish to open a Nochex Seller Account, additional information will be required including for example nature of your business, web address and business address. For certain transactions you need to provide financial information such as your debit card details. We only collect the information that is required by regulation and law for us to process your transactions securely and protect you against fraud.<br><br><b>Use of Personal Information</b> – We only use your personal information to service your account and to improve our service to you. As part of our normal business operation, we do share some financial information with banks, card processing and verification services. Unless required by law, these organisations may not use your information for secondary purposes. Though we make every effort to preserve your privacy we may need to disclose personal information when required by law when we believe that such action is necessary to comply with current judicial proceedings, a court order or legal process serviced on our web site. Otherwise, under no circumstances will information you provided to Nochex be transmitted in any way to a third party. <br><br><b>Aggregate Statistical Information</b> – We may collect aggregated statistical information for purposes of improving our service and your experience with Nochex. This data does not contain personally identifying information, such as your name or email address.<br><br><b>Links</b> – This web site contains links to other sites, however Nochex is not responsible for the privacy practices of such other sites. We recommend you, our users, to be aware that when they leave our site to read the privacy statements of each and every web site that collects personally identifiable information. This privacy statement applies solely to information collected by this web site.<br><br><b>Changing information</b> – You can update your account information in the personal details section of the Nochex web site. However, we cannot delete user information because of legal, regulatory and technical back up requirements.<br><br>20/02/03<br><br></font></td>
 </tr>
 <tr>
 <td colspan="2">
@@ -212,7 +218,7 @@ function _out(nam,num) {
 <a href="http://help.nochex.com/default.asp?Action=Q&amp;ID=109">Security</a>  |
 <a href="http://help.nochex.com/default.asp?Action=Cat&amp;ID=18">About Us</a> |
 <a href="http://greenroom.nochex.com">Forum</a> |
-<a href="http://www.nochex.com/help/contact/">Contact Us</a>
+<a href="http://esupport.nochex.com">Contact Us</a>
 <br>© 2004 NOCHEX - All rights reserved.</font>
 </td></tr>
 </tbody></table>
