--- a/f/fo/for/ford.com.au.html
+++ b/f/fo/for/ford.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ford.com.au privacy policy that was archived on 2002-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20021216021644id_/http%3A//www.ford.com.au/disclaimer/Privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ford.com.au privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207005028id_/http%3A//www.ford.com.au/disclaimer/Privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Ford Australia - Disclaimer</title>
@@ -112,11 +112,9 @@ A.alinks_local:hover
         <br><a href="#top"><img src="/images/disclaimer_top_btn.gif" border="0" vspace="6"></a>
 
         </p><p><b><a name="privacy_4">To whom do we disclose personal information?</a></b>
-        <br>We engage third party service providers to perform functions for Ford.  Such functions include mailing, delivery of purchases, credit card payment authorisation, trend analysis, market research and promotions.
+        <br>We engage third party service providers (including related companies of Ford which may be located outside Australia) to perform functions for Ford.  Such functions include mailing, delivery of purchases, credit card payment authorisation, trend analysis, external audits, market research, promotions and the provision of statistical sales information to industry bodies.
 
-        </p><p>For our service providers to perform those functions, it is sometimes necessary for us to disclose your personal information to those suppliers.  Where disclosures take place, we work with our suppliers to ensure that all personal information we provide to them is kept secure, is only used to perform the task for which we have engaged them and is handled by them in accordance with the National Privacy Principles.
-
-        </p><p>From time to time, we provide statistical information about sales to industry bodies. This may comprise data collected about you and other customers to form aggregate results. However, we will not provide any information that identifies you as our customer.
+        </p><p>For our service providers to perform those functions, it is sometimes necessary for us to disclose your personal information to those suppliers.  Where disclosures take place, we work with these third parties to ensure that all personal information we provide to them is kept secure, is only used to perform the task for which we have engaged them and is handled by them in accordance with the National Privacy Principles.
         <br><a href="#top"><img src="/images/disclaimer_top_btn.gif" border="0" vspace="6"></a>
 
         </p><p><b><a name="privacy_5">How do we protect personal information?</a></b>
@@ -167,7 +165,7 @@ A.alinks_local:hover
 		</p><p><b><a name="privacy_10">Changes to our Privacy Policy</a></b>
         <br>We may change our Privacy Policy from time to time at our discretion and without notice.  At any time, the latest version is available from our website at www.ford.com.au or our Customer Relationship Centre. 
 
-		</p><p><b>Issued February 2002</b>
+		</p><p><b>Issued November 2004</b>
 		<br><a href="#top"><img src="/images/disclaimer_top_btn.gif" border="0" vspace="6"></a>
 
 
