--- a/a/ad/add/addfreestats.com.html
+++ b/a/ad/add/addfreestats.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the addfreestats.com privacy policy that was archived on 2004-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040629063219id_/http%3A//www3.addfreestats.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the addfreestats.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207005354id_/http%3A//www.addfreestats.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>AFS Privacy Policy</title>
@@ -283,7 +283,7 @@ if (top.frames.length!=0) top.location=self.document.location;
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=AddFreeStatscom&adSpace=Webmasters&size=468x60&type=horiz&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=AddFreeStatscom&amp;adSpace=Webmasters&amp;size=468x60&amp;type=horiz&amp;requestID=15921091420.3012238102738878"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=AddFreeStatscom&amp;adSpace=Webmasters&amp;size=468x60&amp;type=horiz&amp;requestID=19803417090.4271395619497127"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=AddFreeStatscom&adSpace=Webmasters&size=468x60&requestID=997393587" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=AddFreeStatscom&adSpace=Webmasters&size=468x60&requestID=997393587" width=468 height=60 border=0 alt="Click Here"></a>
@@ -526,7 +526,7 @@ please contact us at info at addfreestats.com.
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=AddFreeStatscom&adSpace=Webmasters&size=120x600&type=var&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=AddFreeStatscom&amp;adSpace=Webmasters&amp;size=120x600&amp;type=var&amp;requestID=15921092100.819039383382234"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=AddFreeStatscom&amp;adSpace=Webmasters&amp;size=120x600&amp;type=var&amp;requestID=19803417510.5090517945608855"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=AddFreeStatscom&adSpace=Webmasters&size=120x600&requestID=1296959109" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=AddFreeStatscom&adSpace=Webmasters&size=120x600&requestID=1296959109" 
