--- a/l/le/lea/learner.org.html
+++ b/l/le/lea/learner.org.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the learner.org privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610140315id_/http%3A//www.learner.org/about/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the learner.org privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207005848id_/http%3A//www.learner.org/about/privacy_policy.html) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Annenberg / CPB: Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <script src="/newincludes/js/global.js" type="text/javascript"></script>
+<script src="/newincludes/js/about.js" type="text/javascript"></script>
 <style type="text/css">
 <!--
 	@import url(/newincludes/css/index.css);
@@ -13,24 +14,25 @@
 </style>
 </head>
 
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<table width="775" border="0" cellpadding="0" cellspacing="0" class="topbkgrd" bgcolor="#E4F0F6">
-  <tbody><tr> 
-    <td width="43" align="right" valign="bottom"><img src="/newimages/logo-small.gif" width="32" height="25"></td>
-    <td width="732" height="27" valign="bottom"> <table border="0" cellpadding="0" cellspacing="0" width="643">
-        <tbody><tr> 
-          <td><img src="/newimages/nav/nav_r1_c1.gif" width="10" height="22" border="0" alt=""></td>
-          <td><a href="/index.html" onmouseover="flipit('navpic7')" onmouseout="flipback('navpic7')"><img name="navpic7" src="/newimages/nav/home.gif" width="57" height="22" border="0" alt="Home"></a></td>
-          <td><a href="/about/aboutus.html"><img name="navpic1" src="/newimages/nav/about_s.gif" width="75" height="22" border="0" alt="About Us"></a></td>
-          <td><a href="/faq/index.html" onmouseover="flipit('navpic2')" onmouseout="flipback('navpic2')"><img name="navpic2" src="/newimages/nav/faq.gif" width="50" height="22" border="0" alt="FAQ"></a></td>
-          <td><a href="/channel/channel.html" onmouseover="flipit('navpic3')" onmouseout="flipback('navpic3')"><img name="navpic3" src="/newimages/nav/channel.gif" width="94" height="22" border="0" alt="Channel Info"></a></td>
-          <td><a href="/view_programs/view.programs.html" onmouseover="flipit('navpic4')" onmouseout="flipback('navpic4')"><img name="navpic4" src="/newimages/nav/programs.gif" width="109" height="22" border="0" alt="View Programs"></a></td>
-          <td><a href="/catalog/catalog.html" onmouseover="flipit('navpic5')" onmouseout="flipback('navpic5')"><img name="navpic5" src="/newimages/nav/ordering.gif" width="101" height="22" border="0" alt="Ordering Info"></a></td>
-          <td><a href="/channel/chnnl_workshops.html" onmouseover="flipit('navpic6')" onmouseout="flipback('navpic6')"><img name="navpic6" src="/newimages/nav/workshops.gif" width="147" height="22" border="0" alt="Workshops and Courses"></a></td>
-          <td><img src="/newimages/nav/spacer.gif" width="1" height="22" border="0" alt=""></td>
-        </tr>
-      </tbody></table></td>
-  </tr>
+<body bgcolor="#FFFFFF">
+<table width="774" border="0" cellpadding="0" cellspacing="0" class="topbkgrd" bgcolor="#E4F0F6">
+<tbody><tr>
+<td width="732" height="27" valign="bottom" colspan="2">
+<table border="0" cellpadding="0" cellspacing="0" width="685">
+<tbody><tr valign="bottom">
+<td width="42" align="right"><img src="/newimages/logo-small.gif" width="32" height="25" alt="Annenberg/CPB"></td>
+<td><img src="/newimages/nav/nav_r1_c1.gif" width="10" height="22" border="0" alt=""></td>
+<td><a href="/index.html" onmouseover="flipit('navpic7')" onmouseout="flipback('navpic7')"><img name="navpic7" src="/newimages/nav/home.gif" width="57" height="22" border="0" alt="Home"></a></td>
+<td><a href="/about/aboutus.html"><img name="navpic1" src="/newimages/nav/about_s.gif" width="75" height="22" border="0" alt="About Us"></a></td>
+<td><a href="/faq/index.html" onmouseover="flipit('navpic2')" onmouseout="flipback('navpic2')"><img name="navpic2" src="/newimages/nav/faq.gif" width="50" height="22" border="0" alt="FAQ"></a></td>
+<td><a href="/channel/channel.html" onmouseover="flipit('navpic3')" onmouseout="flipback('navpic3')"><img name="navpic3" src="/newimages/nav/channel.gif" width="94" height="22" border="0" alt="Channel Info"></a></td>
+<td><a href="/view_programs/view.programs.html" onmouseover="flipit('navpic4')" onmouseout="flipback('navpic4')"><img name="navpic4" src="/newimages/nav/programs.gif" width="109" height="22" border="0" alt="View Programs"></a></td>
+<td><a href="/catalog/catalog.html" onmouseover="flipit('navpic5')" onmouseout="flipback('navpic5')"><img name="navpic5" src="/newimages/nav/ordering.gif" width="101" height="22" border="0" alt="Buy Videos"></a></td>
+<td><a href="/channel/chnnl_workshops.html" onmouseover="flipit('navpic6')" onmouseout="flipback('navpic6')"><img name="navpic6" src="/newimages/nav/workshops.gif" width="147" height="22" border="0" alt="Workshops and Courses"></a></td>
+<td><img src="/newimages/nav/spacer.gif" width="1" height="22" border="0" alt=""></td></tr>
+</tbody></table>
+</td>
+</tr>
   <tr> 
 <td height="28" bgcolor="#3C5E8B" class="nudge1" colspan="2" style="border-top:1px solid #314E73"> 
 <form action="/resources/browse.html" method="get">
@@ -48,7 +50,7 @@
 <option value="6">Science</option>
 <option value="7">Social Studies and History</option>
 </select> </td>
-<td><img src="/newimages/hr-vert.gif" width="8" height="25" alt=""></td>
+<td><img src="/newimages/hr-vert.gif" width="8" height="25"></td>
 <td width="51" align="center"> <select name="grade" class="dropmenu" id="grade" style="width:95px;">
 <option value="0">or by Grade</option>
 <option value="1">K - 2</option>
@@ -62,7 +64,7 @@
 </td>
 <td width="10" align="center"><img src="/newimages/hr-vert.gif" width="8" height="25" alt=""></td>
 <td width="125" valign="middle"><form method="get" action="/cgi-bin/swish-resource.cgi" enctype="application/x-www-form-urlencoded" class="form"> <input type="hidden" name="si" value="0"> <input name="query" type="text" class="keyword" id="keyword" size="12"></form></td>
-<td width="68" align="left" valign="middle"> <input name="image" type="image" src="/newimages/search.gif" align="middle"></td>
+<td width="68" align="left" valign="middle"><input name="image" type="image" src="/newimages/search.gif" align="middle" width="64" height="29" border="0"></td>
 </tr>
 <input type="hidden" name="Submit" value="Search"><input type="hidden" name="metaname" value="swishdefault">
 </tbody></table> </form></td>
@@ -281,12 +283,12 @@
                     <p> By postal mail: </p>
                     <blockquote> 
                       <p> Annenberg/CPB<br>
-                        401 9th Street NW<br>
+                        1301 Pennsylvania Avenue NW #302<br>
                         Washington, DC 20004</p>
                     </blockquote>
                     <p>By telephone: </p>
                     <blockquote> 
-                      <p> 1-202-879-9654 </p>
+                      <p> 1-202-783-0500 </p>
                     </blockquote>
                     <p>By email: </p>
                     <blockquote> 
@@ -313,11 +315,11 @@
   </tr>
   <tr> 
     <td align="center" bgcolor="#D5D6D8" class="rgtbrdr2"> <p align="left" class="foot"> 
-        &nbsp;&nbsp;<img src="/newimages/arrow-grey.gif" width="7" height="7" align="absmiddle"><a href="/about/privacy_policy.html" class="foot">Privacy Policy</a>&nbsp;&nbsp; <img src="/newimages/arrow-grey.gif" width="7" height="7" align="absmiddle"><a href="/about/contactus.html" class="foot">Contact 
-        Us</a>&nbsp;&nbsp; <img src="/newimages/arrow-grey.gif" width="7" height="7" align="absmiddle"><a href="/about/sitemap.html" class="foot">Site Map</a></p></td>
+        &nbsp;&nbsp;<img src="/newimages/arrow-grey.gif" width="7" height="7" align="middle" alt="go to: "><a href="/about/privacy_policy.html" class="foot">Privacy Policy</a>&nbsp;&nbsp; <img src="/newimages/arrow-grey.gif" width="7" height="7" align="middle" alt="go to: "><a href="/about/contactus.html" class="foot">Contact 
+        Us</a>&nbsp;&nbsp; <img src="/newimages/arrow-grey.gif" width="7" height="7" align="middle" alt="go to: "><a href="/about/sitemap.html" class="foot">Site Map</a></p></td>
   </tr>
   <tr> 
-    <td valign="top"><img src="/newimages/bottom.gif" width="775" height="10"></td>
+    <td valign="top"><img src="/newimages/bottom.gif" width="775" height="10" alt=""></td>
   </tr>
 </tbody></table>
 <span class="cpyright">&nbsp;&nbsp;© 1997 - 2004 Annenberg / CPB. All 
