--- a/d/di/dig/digitalimagecafe.com.html
+++ b/d/di/dig/digitalimagecafe.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the digitalimagecafe.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603024835id_/http%3A//digitalimagecafe.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the digitalimagecafe.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207010743id_/http%3A//www.digitalimagecafe.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>Digital Image Cafe</title>
@@ -7,15 +7,28 @@
 </head>
 
 <body bgcolor="#000000" leftmargin="0" topmargin="0">
-<table width="678" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
+<table width="700" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
 	<tbody><tr>
+		<td colspan="3" bgcolor="#000000"><br>
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tbody><tr>
+					<td width="174"><img src="images/main_bar_left.gif" alt="" width="174" height="44" border="0"></td>
+					<td background="images/main_bar_mid.gif" width="100%">&nbsp;</td>
+					<td width="31"><img src="images/main_bar_right.gif" alt="" width="31" height="44" border="0"></td>
+				</tr>
+			</tbody></table>
+		</td>
+	</tr>
+	<tr>
 		<td width="10"></td>
 		<td>
-			<a href="default.asp"><img src="images/logo_small.gif" alt="" border="0"></a><br>
+			<a href="default.asp"><img src="images/logo_small_new.gif" alt="" border="0"></a>&nbsp;&nbsp;&nbsp;<a href="banner_out.asp?url=http://www.redriverpaper.com/cardshop&amp;image=images/redriver_ccards_0904.gif" target="target=new"><img src="images/redriver_ccards_0904.gif" alt="Red River Papers" width="468" height="60" border="0"></a>
+			<br><br>
 			<img src="images/nav_bar1.gif" alt="" name="nav" id="nav" border="0" usemap="#nav"><map name="nav">
 			<area alt="" coords="-1,1,50,40" href="default.asp">
 			<area alt="" coords="69,0,132,41" href="/forum/default.asp">
 			<area alt="" coords="149,1,250,39" href="mailto:digitalimagecafe@buildyourweb.com">
+			<area alt="" coords="275,0,400,41" href="/critique_gallery.asp">
 			</map>
 
 		</td>
@@ -23,11 +36,11 @@
 	</tr>
 </tbody></table>
 
-<table width="678" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
+<table width="700" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
 	<tbody><tr>
 		<td width="10"></td>
-		<td width="658">
-			<table width="658" border="0">
+		<td width="680">
+			<table width="100%" border="0">
 				<tbody><tr>
 					<td><br><br>
 						<p><b>PRIVACY POLICY</b></p>
@@ -127,7 +140,7 @@
 		<td width="10"></td>
 	</tr>
 </tbody></table>
-<table width="678" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
+<table width="700" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF">
 	<tbody><tr>
 		<td width="10"></td>
 		<td><br><br><br>
@@ -137,15 +150,26 @@
 		<td width="10"></td>
 	</tr>
 	<tr>
-		<td width="10"></td>
-		<td>
-			<p align="center" class="footer1"><strong>© Copyright 2004, Digital Image Cafe, All Rights Reserved<br>
-			<a href="/privacy.asp" class="footer1">View our Privacy Policy</a><br><br>
-			Another powerful creation by <a href="http://www.buildyourweb.com/varicom">VariCom</a>.&nbsp;&nbsp;<em>We Build Web Sites That Work!</em><br>
-			For information or questions about this site, please <a href="mailto:digitalimagecafe@buildyourweb.com" class="footer1">contact us here</a>.</strong>
-			</p><br><br>
+		<td colspan="3">
+			<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#000000">
+				<tbody><tr>
+					<td><img src="images/bottom_bar_left.gif" alt="" width="21" height="17" border="0"></td>
+					<td width="100%" background="images/bottom_bar_mid.gif">&nbsp;</td>
+					<td><img src="images/bottom_bar_right.gif" alt="" width="19" height="17" border="0"></td>
+				</tr>
+			</tbody></table>
+			<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" bgcolor="#000000">
+				<tbody><tr>
+					<td><br><div align="center">
+						<font color="#C0C0C0">
+							Digital Image Cafe is Proud to be Family Friendly and Spam Free.<br><br>
+							©&nbsp;Copyright 2004 Digital Image Cafe<br>
+							Another Powerful Creation by <a href="http://www.varicomconsulting.com"><font color="#C0C0C0">Varicom</font></a>!  <em>We Build Web Sites That Work!</em>
+						</font>
+					</div><br><br><br></td>
+				</tr>
+			</tbody></table>
 		</td>
-		<td width="10"></td>
 	</tr>
 </tbody></table>
 
