--- a/t/tv/tvf/tvfcu.com.html
+++ b/t/tv/tvf/tvfcu.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tvfcu.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607203157id_/http%3A//www.tvfcu.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tvfcu.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207011315id_/http%3A//tvfcu.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>TVFCU.com - Privacy Policy</title>
