--- a/f/fo/fon/fontseek.com.html
+++ b/f/fo/fon/fontseek.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fontseek.com privacy policy that was archived on 2004-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040614212110id_/http%3A//fontseek.com/copyright.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fontseek.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207011810id_/http%3A//www.fontseek.com/copyright.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"><html><head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
