--- a/b/bo/bom/bomis.com.html
+++ b/b/bo/bom/bomis.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bomis.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604190502id_/http%3A//www.bomis.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bomis.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207011926id_/http%3A//bomis.com/about/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>Bomis.Com Privacy Policy</title>
 </head><body bgcolor="ffffff">
